@@ -124,6 +124,9 @@ IN DEVELOPMENT
 
     * Fix problem with UNC paths on Windows 98. (Alexander Belchenko, #84728)
 
+    * Raise DependencyNotPresent if pycurl do not support https. (Vincent
+      Ladeuil, #85305)
+
   TESTING:
 
     * New ``--first`` option to ``bzr selftest`` to run specified tests
